--- a/contac.html
+++ b/contac.html
@@ -5,22 +5,24 @@
     <title></title>
   </head>
   <body>
+    <ul>
+      <a href="index.html">Home Page</a><br>
+      <a href="contac.html">Contact Me</a><br>
+
+    </ul>
     <h1>My Contact Details</h1>
-    <p>My Adress</p>
+    <p>My Address</p>
     <p>0768898938</p>
     <p>myemail@mail.com</p>
 
     <form action="<a href="mailto:walden.marc@yahoo.com?subject" method="post" enctype="text/plain">
       <label for=""><h1>Leave your details</h1></label>
-      <label for="">Your name</label>
-      <input type="text" name="" value="">
-      <br>
-      <br>
-      <label for="">Your Email</label>
-      <input type="password" name="" value="">
-      <input type="submit">
-      <br>
-      <textarea name="name" rows="10" cols="40"></textarea>
+      <label for="">Your Name</label><br>
+      <input type="text" name="your name" value=""><br>
+      <label for="">Your Mail:  </label><br>
+      <input type="email" name="" value=""><br>
+      <textarea name="your message" rows="10" cols="30"></textarea><br>
+      <input type="submit"><br>
     </form>
   </body>
 </html>
