--- a/hobbie.html
+++ b/hobbie.html
@@ -7,9 +7,9 @@
   <body>
     <h1>My Hobbies</h1>
     <ul>
-      <li><a href="greengiant.org.za">Greengiant.org.za</a></li>
-      <li><a href="allaboutrugbyskills.co.za">allaboutrugbyskills.co.za</a></li>
-      <li>michelos.co.za</li>
+      <li>Fun</li>
+      <li>Fight Club</li>
+      <li>Cheeseburgers</li>
     </ul>
   </body>
 </html>
