--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
   <meta charset="utf-8">
   <title>♻ Marc's Site</title>
 </head>
-
 <body>
   <table cellspacing = "20" >
     <td><img src="images/atomic1.png" alt="webdesign"></td>
@@ -13,20 +12,18 @@
     <p><em>Founder and Cto of <strong>SysBluprint SA</strong></em></p>
   </td>
   </table>
-
   <p>I have been  working in system design and web development for the last 5 years</p>
-
 <hr size "3">
 <h3>Websites I have designed</h3>
 <ul>
-  <a href="hobbie.html">Greengiant.org.za</a></li>
+  <a href="hobbie.html">Hobby Page</a></li><br>
+  <a href="contac.html">Contact Me</a></li><br>
 
 </ul>
-
 <h3>My Hobbies</h3>
 <ol>
   <li>Gym</li>
-  <li>Martial Arts</li>
+  <li>Brazilian Jui-Jitsu</li>
   <li>Superbikes</li>
 </ol>
 <hr>
@@ -37,23 +34,21 @@
         <th>Position</th>
     </tr>
   </thead>
-  <tbody>
-
-  </tbody>
-  <tfoot>
-
-  </tfoot>
-  <tr>
     <td>2000 - 2009</td>
-    <td>Busby graphic designer</td>
-  </tr>
+    <td>Busby Graphic Designer</td>
   <tr>
     <td>2009 - 2020</td>
-    <td>Systems engineer</td>
-  </tr>
+    <td>Systems Engineer</td>
 </table>
+<h3>Skills</h3>
+<table>
 
-
+    <td>Photoshop</td>
+    <td>Coral Draw</td>
+  <tr>
+    <td>Html</td>
+    <td>Css</td>
+</table>
 </body>
 
 </html>
