--- a/index.html
+++ b/index.html
@@ -1,54 +1,60 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <title>Marc Walden</title>
+    <link rel="stylesheet" href="css/styles.css">
+    <link rel="icon" href="">
+    <link href="https://fonts.googleapis.com/css2?family=Sacramento&display=swap" rel="stylesheet">
 
-<head>
-  <meta charset="utf-8">
-  <title>♻ Marc's Site</title>
-</head>
-<body>
-  <table cellspacing = "20" >
-    <td><img src="images/atomic1.png" alt="webdesign"></td>
-    <td><h1>Marc Walden</h1>
-    <p><em>Founder and Cto of <strong>SysBluprint SA</strong></em></p>
-  </td>
-  </table>
-  <p>I have been  working in system design and web development for the last 5 years</p>
-<hr size "3">
-<h3>Websites I have designed</h3>
-<ul>
-  <a href="hobbie.html">Hobby Page</a></li><br>
-  <a href="contac.html">Contact Me</a></li><br>
 
-</ul>
-<h3>My Hobbies</h3>
-<ol>
-  <li>Gym</li>
-  <li>Brazilian Jui-Jitsu</li>
-  <li>Superbikes</li>
-</ol>
-<hr>
-<table>
-  <thead>
-    <tr>
-      <th>Dates</th>
-        <th>Position</th>
-    </tr>
-  </thead>
-    <td>2000 - 2009</td>
-    <td>Busby Graphic Designer</td>
-  <tr>
-    <td>2009 - 2020</td>
-    <td>Systems Engineer</td>
-</table>
-<h3>Skills</h3>
-<table>
+  </head>
+  <body>
+    <div class="top">
+      <img class="cloud1"src="images/cloud1.png" alt="clouds">
+      <div class="Name">
+      <h1 class="heading1" >Marc Walden</h1>
+      <p>A Programmer</p>
+        </div>
+      <img class="cloud2" src="images/cloud1.png" alt="clouds">
+    </div>
 
-    <td>Photoshop</td>
-    <td>Coral Draw</td>
-  <tr>
-    <td>Html</td>
-    <td>Css</td>
-</table>
-</body>
 
+
+    <div class="middle">
+      <div class="profile">
+        <hr>
+        <img class="Prog-img" src="images/web-programming.png" alt="">
+        <h2>Hello</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+    </div>
+
+<div class="skills">
+  <hr>
+  <div class="skill-row">
+    <img class="code_img" src="images/code.png" alt="coding">
+    <h2>My Skills</h2>
+    <h3>Lorem ipsum</h3>
+    <p>Full-stack web developer. HTML, CSS, Javascript, Node, React, MongoDB </p>
+  </div>
+</div>
+
+</div>
+
+<div class="contact-me">
+  <div class="">
+    <hr>
+  <h2>Get in Touch</h2>
+  <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit</h3>
+  <p>Lorem ipsum dolor sit amet, consectetur</p>
+  <a class="btn" href="mailto:walden.marc@yahoo.com">Contact me</a>
+  </div>
+
+  <a class="footer_link" href="#">LinkedIn</a>
+  <a class="footer_link" href="#">Twitter</a>
+  <a class="footer_link" href="#">Website</a>
+
+  <p class="copr">© 2020 MarcWaldenDesign.</p>
+</div>
+  </body>
 </html>
