--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <hr>
         <img class="Prog-img" src="images/web-programming.png" alt="">
         <h2>Hello</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+        <p>I am a Web Developer that lives in South Africa, I am experienced as a Systems Engineer for a company that offered online ordering, what set us apart from the usual online ordering systems is that we where one of the only company that is directly connected to the POS systems of the restaurants. <br> We do this by directly connecting to the POS system API’s either with them connecting to us or we connect to them using REST API. I have found this to be a challenging but exciting field to be in and setting up the individual stores Menu’s and Websites has been a great challenge.</p>
     </div>
 
 <div class="skills">
