--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="top">
       <img class="cloud1"src="images/cloud1.png" alt="clouds">
       <div class="Name">
-      <h1 class="heading1" >Marc Walden</h1>
+      <h1 class="heading1" >-Marc Walden-</h1>
       <p>A Programmer</p>
         </div>
       <img class="cloud2" src="images/cloud1.png" alt="clouds">
@@ -33,8 +33,7 @@
   <hr>
   <div class="skill-row">
     <img class="code_img" src="images/code.png" alt="coding">
-    <h2>My Skills</h2>
-    <h3>Lorem ipsum</h3>
+    <h2>My Skills</h2>    
     <p>Full-stack web developer. HTML, CSS, Javascript, Node, React, MongoDB </p>
   </div>
 </div>
@@ -51,7 +50,6 @@
   </div>
 
   <a class="footer_link" href="#">LinkedIn</a>
-  <a class="footer_link" href="#">Twitter</a>
   <a class="footer_link" href="#">Website</a>
 
   <p class="copr">© 2020 MarcWaldenDesign.</p>
